force-app/main/default/objects/Dynamic_SDR__c/Dynamic_SDR__c.object-meta.xml
<CustomObject>
    <label>Dynamic SDR</label>
    <nameField>
        <displayFormat>DSDR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dynamic SD Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>