force-app/main/default/objects/Dynamic_SDR__c/fields/Euribor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Euribor_Rate__c</fullName>
    <inlineHelpText>euribor 3 month</inlineHelpText>
    <label>Euribor Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>