force-app/main/default/objects/Dynamic_SDR__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <formula>If( IsPickVal( Type__c, &apos;SOFR&apos;), SOFR_Rate_Fixing__c,
If( IsPickVal( Type__c, &apos;Euribor&apos;), Euribor_Rate__c,
null))</formula>
    <label>Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>