force-app/main/default/objects/Dynamic_SDR__c/fields/SOFR_Percentile_50__c.field-meta.xml
<CustomField>
    <fullName>SOFR_Percentile_50__c</fullName>
    <inlineHelpText>newyorkfed rate</inlineHelpText>
    <label>SOFR Percentile 50</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>