force-app/main/default/objects/Dynamic_SDR__c/fields/SOFR_Rate_Fixing__c.field-meta.xml
<CustomField>
    <fullName>SOFR_Rate_Fixing__c</fullName>
    <inlineHelpText>cme 3 month</inlineHelpText>
    <label>SOFR Rate Fixing</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>