force-app/main/default/objects/Dynamic_SDR__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOFR</fullName>
                <default>true</default>
                <label>SOFR</label>
            </value>
            <value>
                <fullName>Euribor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>