force-app/main/default/objects/Dynamic_SDR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Date__c</columns>
    <columns>Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>